@@ -1,4 +1,4 @@
-      <p>&nbsp;&nbsp;&nbsp;{lang_action}<br>
+      <p><b>&nbsp;&nbsp;&nbsp;{lang_action}</b><br>
       <hr noshade width="98%" align="center" size="1">
 
       <center>
